<resources>
    <string name="app_name">Cerdikia</string>
    <string name="title_home">Home</string>
    <string name="title_rangking">Rangking</string>
    <string name="title_shop">Shop</string>
    <string name="login_text">Ayo Mulai !!</string>
    <string name="login_description">Kumpulkan Ilmu, Naik Level, dan jadilah juara masa depan!</string>
    <string name="home_description">Deskripsi dari bagian ini bisa dengan penjelasan apapun</string>
    <string name="home_progress">Kelas  </string>
    <string name="home_title">Bagian 1 : Judul</string>
    <string name="loading_title">Memuat....</string>
    <string name="loading_description">Setiap detik adalah kesempatan belajar dan berkembang! Siap naik ke level berikutnya?</string>
    <string name="completion_title">Latihan Selesai!</string>
    <string name="cd_totalXp">Total XP Placeholder</string>
    <string name="nama_kosong">Nama Tidak boleh Kosong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="kelas_kosong">Kelas Kosong</string>
    <string name="web_client_id">698707798052-de2742d61vnsfppvsl78455dvi0bhije.apps.googleusercontent.com</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="tunggu_verifikasi">Akun kamu sedang menunggu\nproses verifikasi. Mohon\ntunggu sebentar ya.</string>
    <string name="verifikasi_sekarang">Verifikasi akun dulu ya, supaya bisa tukar hadiah</string>
    <string name="item_image">ini adalah gambar item</string>
</resources>