<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fhanafi.cerdikia.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_stageFragment"
            app:destination="@id/stageFragment">
            <argument
                android:name="materiId"
                android:defaultValue="-1"
                app:argType="integer" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/stageFragment"
        android:name="com.fhanafi.cerdikia.ui.stage.StageFragment"
        android:label="StageFragment"
        tools:layout="@layout/fragment_stage">
        <argument
            android:name="materiId"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_stageFragment_to_soalFragment"
            app:destination="@id/soalFragment">
            <argument
                android:name="materiId"
                android:defaultValue="-1"
                app:argType="integer" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/soalFragment"
        android:name="com.fhanafi.cerdikia.ui.question.SoalFragment"
        android:label="SoalFragment"
        tools:layout="@layout/fragment_soal">
        <argument
            android:name="materiId"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_soalFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            />
        <action
            android:id="@+id/action_soalFragment_to_completionFragment"
            app:destination="@id/completionFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/completionFragment"
        android:name="com.fhanafi.cerdikia.ui.completion.CompletionFragment"
        android:label="Completion" >
        <argument
            android:name="XP"
            app:argType="integer" />
        <argument
            android:name="GEMS"
            app:argType="integer" />
        <argument
            android:name="materiId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/navigation_rangking"
        android:name="com.fhanafi.cerdikia.ui.rangking.RangkingFragment"
        android:label="@string/title_rangking"
        tools:layout="@layout/fragment_rangking" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.fhanafi.cerdikia.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.fhanafi.cerdikia.ui.profile.profileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>